orm-tests/src/snapshots/surrealdb_macros__query_define_token__tests__define_token_statement_on_namespace.snap
---
source: surreal-macros/src/query_define_token.rs
expression: token_def.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Idiom(
            Idiom(
                [
                    Field(
                        Ident(
                            "oyelowo_token",
                        ),
                    ),
                ],
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "oyelowo_token",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "abrakradabra",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'abrakradabra'",
        description: None,
    },
]
